intel/bench_214/extr_.linuxdriversgpudrmradeonr600.c_rs780_pm_init_profile_with_main/log.txt
bench_214/extr_.linuxdriversgpudrmradeonr600.c_rs780_pm_init_profile_with_main/extr_.linuxdriversgpudrmradeonr600.c_rs780_pm_init_profile_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
1 error generated.
HLS FPGA Parse FAILED.
